[package]
name = "workctl"
version = "0.6.0"
edition = "2021"
description = "Daily work toolkit TUI"
license = "MIT"
repository = "https://github.com/justdoswift/workctl"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "install.sh",
  "src/**",
]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
http = "1.4.0"
ratatui = "0.30.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.23.0"
